Fix: Add required logo assets for build
- Updated .gitignore to include raap-logo-new.png and brand logos
- These assets are required for production build
- Fixes ENOENT error in deployment

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ vite.config.ts.*
 backup/
 attached_assets/*
 !attached_assets/.gitkeep
+!attached_assets/raap-logo-new.png
+!attached_assets/image_*.png
 *.log
