--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "mixpanel-browser": "^2.73.0",
     "next-themes": "^0.4.6",
     "openid-client": "^6.7.1",
     "passport": "^0.7.0",
@@ -99,6 +100,7 @@
     "@types/express-session": "^1.18.0",
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
+    "@types/mixpanel-browser": "^2.60.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
